# tauri_skydesk

./: README.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: main.yml  release.yml
public/note/: desktop.ini
src/: App.vue  main.ts  types.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
src/api/: index.ts
src/common/: index.ts
src/components/: rightMenu.vue  waterFall.vue
src/router/: index.ts
src/views/: index.vue
src/views/page/: clipboard.vue  editor.vue  lnk.vue  netspeed.vue  program.vue  roulette.vue  search.vue  setdisk.ts  sysinfo.vue  wallpaper.vue  weather.vue
