[package]
name = "skydesk"
version = "1.0.0"
description = "Skydesk"
authors = ["you"]
license = "skydesk"
repository = "skydesk"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "system-tray", "api-all"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
rdev = {version = "0.5.2", features = ["unstable_grab"] }
sysinfo = "0.29.8"
screenshots = "0.8.2"
tauri-plugin-clipboard = "0.3.0"
wallpaper = { version = "3.2.0", features = ["from_url"] }
tauri-plugin-wallpaper = "0.0.1"
winres-edit = "0.2.0"
image = "0.24.7"
get_sys_info = "0.1.21"
[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

